deploy/openshift/10-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stellar-wallet-server
  namespace: stellar-wallet-server
  labels:
    app: stellar-wallet-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stellar-wallet-server
  template:
    metadata:
      labels:
        app: stellar-wallet-server
    spec:
      containers:
        - name: server
          image: quay.io/btomlins/stellar-wallet-server:latest
          resources: {}
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          ports:
            - containerPort: 8080
...
