deploy/openshift/06-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stellar-wallet-server
  namespace: stellar-wallet-server
spec:
  ports:
    - name: server
      nodePort: 0
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: stellar-wallet-server 
  sessionAffinity: None
  type: ClusterIP
...
