deploy/openshift/07-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stellar-wallet-server
  namespace: stellar-wallet-server
  annotations:
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  labels:
    app: stellar-wallet-server
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: stellar-wallet-server
...
