deploy/openshift/05-networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: stellar-wallet-server
spec:
  podSelector: {}
  ingres: []
...
